# Proyecto---Hospedaje

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
lib/googleTest/googlemock/include/gmock/: gmock-matchers.h
lib/googleTest/googlemock/test/: gmock-matchers_test.cc
lib/googleTest/googletest/include/gtest/: gtest-printers.h
lib/googleTest/googletest/include/gtest/internal/: gtest-port.h
lib/googleTest/googletest/test/: googletest-printers-test.cc  gtest_xml_outfiles_test.py  gtest_xml_output_unittest.py  gtest_xml_test_utils.py
src/: Bdata.cpp  Bdata.h  CMakeLists.txt  evaluacion.cpp  evaluacion.h  huespede.cpp  huespede.h  main.cpp  main.h  person.cpp  person.h  propietarios.cpp  propietarios.h  reservas.cpp  reservas.h
